implement dynamic attach and remove subjects
