# storage/api-docs/api-docs.json
@@ -502,22 +502,12 @@
                         "format": "int64"
                     },
                     {
-                        "name": "body",
-                        "in": "body",
-                        "description": "Proceeding object that needs to be added",
+                        "name": "subject_id[0]",
+                        "in": "query",
+                        "description": "Subject id",
                         "required": true,
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "properties": {
-                                    "subject_id": {
-                                        "description": "[updateCovers description]",
-                                        "type": "integer",
-                                        "example": 2
-                                    }
-                                }
-                            }
-                        }
+                        "type": "integer",
+                        "format": "int64"
                     }
                 ],
                 "responses": {
